--- a/Front End/Exercice maquette CSS/style.css
+++ b/Front End/Exercice maquette CSS/style.css
@@ -1,7 +1,3 @@
-body{
-    margin-left: 5%;
-    margin-right: 5%;
-}
 .bandeau{
     display: flex;
     align-items: stretch;
@@ -11,13 +7,14 @@ body{
 .bandeau_left{
     display: flex;
     grid-row: 1;
+    width: 200px;
 }
 
 nav{
     display: flex;
     grid-row: 1;
     width: fit-content;
-    flex-grow: inherit;
+    flex-grow: 1;
 }
 
 .bandeau_right {
@@ -33,15 +30,14 @@ main {
     justify-content: center;
     align-items: center;
     padding: 20px 0;
-
 }
 section{
     display: flex;
+    width: 900px;
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 10px;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin: 0 auto;
 }
 
 .section_info h2{
@@ -50,18 +46,18 @@ section{
 
 .card_container{
     width: 400px;
-    border: 1px solid black;
-    padding: 10px;
-    gap: 10px;
-    flex: 1 1 auto;
+    background-color: lightgrey;
+    padding: 1em;
 }
 .card_container img{
     float: left;
+    margin: 0 1em 1em 0;
+    object-fit: cover;
 }
 .card_container button{
     display: inline;
 }
-.card_container :not p{
+.card_container :not(p){
     .card_container img{
         width: 100%;
     }
@@ -83,25 +79,18 @@ section{
 
 footer{
     display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    gap: 10px;
-    padding: 20px;
 }
 .footer_left h3,.footer_middle h3{
     text-align: center;
 }
 
 .footer_left{
-    flex-grow: 1.5;
-    gap: 10px;
-    width: 350px;
+    flex:1 2 350px;
     border: 1px solid black;
 }
 .footer_middle{
-    width: 200px;
     border: 1px solid black;
-    flex-shrink: 1;
+    flex: 1 1 200px
 }
 .footer_middle li{
     margin-top: 10px;
@@ -119,11 +108,11 @@ footer{
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    flex-basis: 150px;
     width: 150px;
     height: 80px;
     border: 1px solid black;
     padding: 10px;
+    flex:0 0 150px;
 }
 
 .footer_left img {
